--- a/server.ini
+++ b/server.ini
@@ -1,3 +1,3 @@
 [server]
-multicast_groups = ["224.0.0.1", "224.0.0.2"]
+multicast_groups = ["224.0.0.1", "224.0.0.2", "224.0.0.3", "224.0.0.4"]
 library_file = test.json
