feat: video files instead of strings

--- a/server.ini
+++ b/server.ini
@@ -1,6 +1,6 @@
 [server]
-multicast_groups = ["224.0.0.1", "224.0.0.2", "224.0.0.3", "224.0.0.4"]
-library_file = test.json
+multicast_groups = ["224.0.0.1"]
+library_file = library.json
 
 [unicast_server]
 unicast_ip = 192.168.1.11
