feat: first version

--- a/server.ini
+++ b/server.ini
@@ -1,5 +1,5 @@
 [server]
-multicast_groups = ["224.0.0.1", "224.0.0.2", "224.0.0.3", "224.0.0.4"]
+multicast_groups = ["224.0.0.1", "224.0.0.2"]
 library_file = test.json
 
 [unicast_server]
