feat: latest changes

--- a/server.ini
+++ b/server.ini
@@ -1,6 +1,6 @@
 [server]
 multicast_groups = ["224.0.0.1"]
-library_file = library.json
+library_file = ./data/library.json
 
 [unicast_server]
 unicast_ip = 127.0.0.1
