--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,11 +2,17 @@
 
 FROM python:3.8-slim-buster
 
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential
+
 WORKDIR /api
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY . .
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+USER appuser 
 
+EXPOSE 5002
+
+COPY . .
 CMD [ "python3", "api.py"]
